fixed spacing

--- a/src/Components/Pages/Resume.css
+++ b/src/Components/Pages/Resume.css
@@ -165,6 +165,7 @@
   padding: 0 1rem;
   margin: 0;
   display: flex;
+  width: 100%;
   flex-direction: column;
 }
 
